# app/Http/Controllers/Api/V1/TransactionController.php
@@ -3,6 +3,8 @@
 namespace App\Http\Controllers\Api\V1;
 
 
+use App\Http\Requests\StoreCategory;
+use App\Http\Requests\StoreTransaction;
 use App\Repositories\CategoryRepository;
 use App\Models\Transaction;
 use App\Repositories\TransactionRepository;
@@ -17,23 +19,44 @@ class TransactionController extends ApiController
         $this->transactionService = new TransactionService($transactionRepository);
     }
 
+
     /**
-     * @OA\POST(
-     *     path="/api/get-access-token/{googleIdToken}",
-     *     summary="Get app token by using google id token",
-     *     @OA\Parameter(
-     *         description="use google id token from firebase authentication.",
-     *         in="path",
-     *         name="googleIdToken",
-     *         required=true,
+     * @OA\Post(
+     *     path="/api/transactions",
+     *     summary="Add or update transaction",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="unique_id",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="amount",
+     *                     type="integer"
+     *                 ),
+     *                  @OA\Property(
+     *                     property="note",
+     *                     type="string"
+     *                 ),
+     *                 example={"unique_id": "a3fb6", "amount": 100,"note":"hello"}
+     *             )
+     *         )
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="returns a sanctum token if successful."
+     *         description="OK"
      *     )
      * )
      */
-    public function create(){
+    public function store(StoreTransaction $request){
+        $transaction = $this->transactionService->create($request->validated());
+        if($transaction)
+            return $this->respondWithSuccess(["data"=>[
+                "transaction"=>$transaction
+            ]]);
 
+        return $this->respondError("Cannot create or update transaction.");
     }
 }
