# storage/api-docs/api-docs.json
@@ -22,28 +22,11 @@
                         "description": "returns a sanctum token if successful."
                     }
                 }
-            },
-            "post": {
-                "summary": "Get app token by using google id token",
-                "operationId": "583722b448b8e588aa9d175446a985a8",
-                "parameters": [
-                    {
-                        "name": "googleIdToken",
-                        "in": "path",
-                        "description": "use google id token from firebase authentication.",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "returns a sanctum token if successful."
-                    }
-                }
             }
         },
         "/api/categories": {
             "post": {
-                "summary": "Adds a new category",
+                "summary": "Add or update category",
                 "operationId": "e0210673ee95266563e9a973956194a1",
                 "requestBody": {
                     "content": {
@@ -61,6 +44,42 @@
                                 "example": {
                                     "unique_id": "a3fb6",
                                     "name": "Food"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/transactions": {
+            "post": {
+                "summary": "Add or update transaction",
+                "operationId": "9be3876053fa319aa65a3c4eea85afd3",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "unique_id": {
+                                        "type": "string"
+                                    },
+                                    "amount": {
+                                        "type": "integer"
+                                    },
+                                    "note": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "unique_id": "a3fb6",
+                                    "amount": 100,
+                                    "note": "hello"
                                 }
                             }
                         }
